jury box spacing fix

--- a/src/Jurors/jurors.css
+++ b/src/Jurors/jurors.css
@@ -1,6 +1,6 @@
 .jury-box {
   margin: 20px 20px 20px 20px;
-  padding: 50px 5px;
+  padding: 30px 5px;
   border: 10px double black;
   border-radius: 3px;
   background-color: #936340;
@@ -9,6 +9,7 @@
 
 h2 {
   padding: 0;
+  padding-bottom: 20px;
   margin: 1px 0;
 }
 
